# rustfmt-wasm

./: Cargo.toml  README.md  index.html  index.ts
src/: lib.rs
